--- a/index.html
+++ b/index.html
@@ -597,5 +597,15 @@
 					return true;
 				}
 			</script>
+			<script>
+			// javascript
+				window.onload = function() { 
+  				var el = document.getElementById('g-recaptcha-response'); 
+ 				 if (el) { 
+    				el.setAttribute('required', 'required'); 
+					  } 
+				}
+			</script>
+							
 	</body>
 </html>
