--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 
 								<ul class="icons">
 									<li><a href="https://youtube.com/KiroxTV" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-									<li><a href="https://www.facebook.com/KiroxTV" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.facebook.com/mixedbykrx/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/mixedbykrx" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://linktr.ee/kiroxtv" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 								</ul>								
