--- a/faq.html
+++ b/faq.html
@@ -339,7 +339,7 @@
 			window.fbAsyncInit = function() {
 				FB.init({
 				xfbml            : true,
-				version          : '12.0' // Tutaj wstaw odpowiednią wersję API
+				version          : 'v12.0' // Tutaj wstaw odpowiednią wersję API
 				});
 			};
 
